--- a/package.json
+++ b/package.json
@@ -10,14 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@discord-player/extractor": "^4.3.1",
-    "@discordjs/opus": "^0.9.0",
-    "@discordjs/voice": "^0.16.0",
-    "discord-player": "^6.5.0",
     "discord.js": "^14.11.0",
-    "dotenv": "^16.3.1",
-    "ffmpeg-static": "^5.1.0",
-    "node-fetch": "^3.3.1",
-    "ytdl-core": "^4.11.4"
+    "dotenv": "^16.3.1"
   }
 }
