--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
-  "name": "discordbot",
+  "name": "discordtest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "commonjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Develekko/discordtest.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Develekko/discordtest/issues"
+  },
+  "homepage": "https://github.com/Develekko/discordtest#readme",
   "dependencies": {
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1"
