--- a/package.json
+++ b/package.json
@@ -1,26 +1,31 @@
 {
-  "name": "discordtest",
+  "name": "music-bot",
   "version": "1.0.0",
-  "description": "",
+  "repository": "https://github.com/TannerGabriel/discord-music-bot.git",
+  "description": "A simple discord music bot",
   "main": "index.js",
-  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "prettier --write \"**/*.js\""
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Develekko/discordtest.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Develekko/discordtest/issues"
-  },
-  "homepage": "https://github.com/Develekko/discordtest#readme",
+  "keywords": [
+    "discord",
+    "music",
+    "bot"
+  ],
+  "author": "Gabriel Tanner",
+  "license": "MIT",
   "dependencies": {
-    "discord.js": "^14.11.0",
+    "@discordjs/opus": "^0.8.0",
+    "discord-player": "^5.3.2",
+    "discord.js": "^14.7.0",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "ffmpeg": "0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
+    "prism-media": "^1.3.4",
+    "ytdl-core": "^4.11.2"
+  },
+  "devDependencies": {
+    "prettier": "2.8.0"
   }
 }
